# actix-sse-demo

./: Cargo.toml  README.md  index.html
src/: main.rs
