[package]
name = "actix-sse-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.19.1"
futures-util = "0.3.28"
tokio-stream = "0.1.14"
tokio = "1.33.0"
serde = "1.0.189"
serde_json = "1.0.107"
serde_derive = "1.0.189"
time = {version = "0.3.30" , features = ["std", "serde", "formatting"] }
